test/fail/infer12.v3
//@seman
class A { }
class B extends A { }
def m() {
	var x = [g, f][0];
}
def f(a: A) -> int;
def g(b: B) -> int;
